--- a/templates/Customer/HomeFreal.html
+++ b/templates/Customer/HomeFreal.html
@@ -30,7 +30,7 @@
         <span>Freal</span>
       </div>
       <div class="search-bar">
-        <input type="text" placeholder="Explore Kaloka..." />
+        <input type="text" placeholder="Explore Freal..." />
       </div>
       <nav class="navigation">
         <ul>
@@ -49,10 +49,14 @@
             <li>
               <a href="#"><i class="fa-solid fa-house"></i> Home</a>
             </li>
+          </ul>
+        </div>
+        <div class="navbar-center">
+          <ul>
             <li><a href="#">Explore</a></li>
             <li><a href="#">Community feed</a></li>
             <li>
-              <a href="#">Mutual friend <span>12</span></a>
+              <a href="#">Mutual friend <span></span></a>
             </li>
           </ul>
         </div>
@@ -60,8 +64,8 @@
           <a href="#"><i class="fas fa-comment-alt"></i></a>
           <a href="#"><i class="fas fa-bell"></i></a>
           <a href="#" class="profile-link">
-            <img src="profile-icon.png" alt="Profile" />
-            <span>Havid N</span>
+            <img src="../../static/images/avata/avata1.jpg" alt="Profile" />
+            <span>AndyVu Coder</span>
           </a>
         </div>
       </nav>
