--- a/static/css/HomeFreal.main.css
+++ b/static/css/HomeFreal.main.css
@@ -448,7 +448,7 @@ body {
 
 .post-info span {
   font-size: 12px;
-  color: #999;
+  color: #96979b;
 }
 
 .post-item ul {
@@ -458,7 +458,7 @@ body {
 }
 
 .post-item ul li a {
-  color: #888;
+  color: #96979b;
 }
 
 .post-item ul li a:hover {
@@ -476,8 +476,7 @@ body {
   border-radius: 10px;
 }
 .post-actions {
-  margin-bottom: 5px;
-  border-bottom: 1px solid #333;
+  margin-bottom: 20px;
 }
 .post-actions ul {
   list-style: none;
@@ -500,6 +499,9 @@ body {
 
 .post-actions ul li a:hover {
   color: #fff;
+}
+.post-actions__line {
+  border: 1px solid #333;
 }
 
 .post-comment {
@@ -527,14 +529,14 @@ body {
   background-color: #27292f;
   font-size: 16px;
   outline: none;
-  margin-right: 10px;
+  margin-right: -5px;
 }
 
 .content-think__comment ul {
   list-style: none;
   display: flex;
   align-items: center;
-  margin-left: 10px;
+  margin-left: -100px;
 }
 
 .content-think__comment ul li {
@@ -542,7 +544,7 @@ body {
 }
 
 .content-think__comment ul li a {
-  color: #888;
+  color: #96979b;
   text-decoration: none;
 }
 
@@ -554,13 +556,77 @@ body {
   display: flex;
   justify-content: space-between;
   margin: 10px 0;
-  color: #888;
+  color: #83888d;
 }
 
+/* Thêm CSS cho icon */
+.comment-options .dropdown-comment i.fa-circle-chevron-down {
+  color: #fff;
+  font-size: 16px;
+  margin: 0 5px;
+  cursor: pointer;
+}
+
+.dropdown-comment {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-comment .select-item {
+  display: flex;
+  align-items: center;
+  color: #fff;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.dropdown-comment .select-item span {
+  margin-right: 5px;
+}
+
+.dropdown-comment .dropdown-menu__comment {
+  background: #27292f;
+  width: 170px;
+  text-align: left;
+  padding: 5px 10px;
+  position: absolute;
+  left: 0;
+  top: 30px;
+  z-index: 9;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.3s;
+  border-radius: 5px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+.dropdown-comment .dropdown-menu__comment li {
+  list-style: none;
+}
+
+.dropdown-comment .dropdown-menu__comment li a {
+  font-size: 14px;
+  color: #ffffff;
+  padding: 10px;
+  display: block;
+  text-decoration: none;
+  width: 100%;
+}
+
+.dropdown-comment .dropdown-menu__comment li a:hover {
+  background-color: #575757;
+}
+
+/* Show dropdown on hover */
+.dropdown-comment:hover .dropdown-menu__comment {
+  display: block;
+  opacity: 1;
+  visibility: visible;
+}
 .comment-list {
   margin-top: 10px;
   padding: 10px;
-  background-color: #333;
+  background-color: #1e1f24;
   border-radius: 10px;
 }
 
@@ -588,7 +654,7 @@ body {
 
 .comment-content p {
   margin: 5px 0;
-  color: #aaa;
+  color: #96979b;
 }
 
 .comment-content ul {
@@ -601,7 +667,7 @@ body {
 }
 
 .comment-content ul li a {
-  color: #888;
+  color: #fff;
   text-decoration: none;
   font-size: 12px;
 }
@@ -609,12 +675,21 @@ body {
 .comment-content ul li a:hover {
   color: #fff;
 }
+.comment-list .comment-content i.fa-arrows-turn-right {
+  color: #fff;
+  font-size: 16px;
+  margin: 0px 10px 0 0px;
+  cursor: pointer;
+}
 
 .view-all-comment {
   text-align: center;
-  margin-top: 10px;
+  margin-top: 20px;
 }
-
+.post-comment__line {
+  margin-top: 20px;
+  border: 1px solid #333;
+}
 .view-all-comment a {
   color: #00aaff;
   text-decoration: none;
