--- a/templates/Customer/HomeFreal.html
+++ b/templates/Customer/HomeFreal.html
@@ -33,15 +33,22 @@
         <span class="search-icon"><i class="fa-solid fa-magnifying-glass"></i></span>
         <input type="text" placeholder="Explore Freal..." />
       </div>
-      <nav class="navigation">
+      <div class="navigation">
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Community</a></li>
-          <li><a href="#">Marketplace</a></li>
-          <li><a href="#">Kaloka events</a></li>
-          <li><a href="#">News feed</a></li>
+          <li>
+            <a href="#"><i class="fa-solid fa-house"></i>Home</a>
+          </li>
+          <li>
+            <a href="#"><i class="fa-solid fa-blog"></i>Blog</a>
+          </li>
+          <li>
+            <a href="#"><i class="fa-solid fa-calendar-days"></i>Freal events <span class="new-listing">4 new </span></a>
+          </li>
+          <li>
+            <a href="#"><i class="fa-regular fa-newspaper"></i>News feed <span class="new-listing">4 new </span></a>
+          </li>
         </ul>
-      </nav>
+      </div>
     </div>
     <div class="main-container">
       <header class="navbar">
